# arxiv-sota-agent

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
analysis/: postprocess-spurious.ipynb
config/: spurious-correlation.yaml
data/: .gitkeep
data/parsed_papers/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
data/sources/: .gitkeep
scripts/: download_paper.py  postprocess-spurious.ipynb  run_benchmark.py  run_pipeline.py  tutorial.py
src/sota_agent/: __init__.py  analyzer.py  arxiv_download.py  client.py  core.py  filter.py  paper.py  pdf_paper.py  scanner.py  schema.py  utils.py  vertex_client.py
src/sota_agent/model/: pdf_paper.py  schema.py
src/sota_agent/utils/: __init__.py  data_ingest.py  data_ingester.py  fetcher.py  filter.py  loader.py  pdf_fetcher.py  scanner.py
tests/: conftest.py  sample.py  test_arxiv_download.py  test_arxiv_paper.py  test_fetch_latex.py  test_filter.py  test_integration.py  test_scanner.py
